# OlympusTrader

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.Docker.md  README.md  compose.mt5.yaml  compose.yaml  main.py  pyproject.toml  pyvenv.cfg  requirement.txt  requirements.txt  template.env  testRSIStrat.py  testRSIStratv2.py  v2_childInsight.py  v2_test_paper_live.py  v2_tests.py
Docker/: Dockerfile.trader  Dockerfile.ui  localTrader.Dockerfile  localTrader.mt5.Dockerfile  trader.Dockerfile
Docker/Metatrader/: start.sh
OlympusTrader/: __init__.py
OlympusTrader/alpha/: __init__.py  base_alpha.py  ema_price_crossover.py  rsi_divergance_alpha.py  test_entry.py
OlympusTrader/broker/: TradingViewBroker.py  alpaca_broker.py  base_broker.py  ccxt_broker.py  interfaces.py  mt5_broker.py  paper_broker.py  templateBroker.py  tradingTwoOneTwo_broker.py
OlympusTrader/insight/: __init__.py  insight.py
OlympusTrader/insight/executors/: README.md  __init__.py  base_executor.py
OlympusTrader/insight/executors/canceled/: defaultOnCancelled.py
OlympusTrader/insight/executors/closed/: defaultOnClosed.py
OlympusTrader/insight/executors/filled/: basicStopLoss.py  basicTakeProfit.py  closeExhaustedInsight.py  closeMarketChanged.py
OlympusTrader/insight/executors/general/: allExecutor.py  anyExecutor.py
OlympusTrader/insight/executors/new/: allowTradingWindow.py  cancelAllOppositeSide.py  dynamicQuantityToRisk.py  fullAccountQuantiityToRisk.py  marketOrderEntryPrice.py  minimumRiskToReward.py  percentageDCALevels.py  rejectExpiredInsight.py
OlympusTrader/insight/executors/rejected/: defaultOnReject.py
OlympusTrader/strategy/: __init__.py  base_strategy.py  interfaces.py  sharedmemory.py  strategy.py
OlympusTrader/ui/: __main__.py  app.py  base_ui.py  charts.py
OlympusTrader/ui/assets/: tailwind_config.js
OlympusTrader/ui/components/: accountBalanceCard.py  dashboardCard.py  dashboardCards.py  dashboardNav.py  insightDetail.py  matricItem.py  placeholderChart.py  tradeRow.py  tradesTable.py
OlympusTrader/ui/helper/: sharedStrategyManager.py  tradingViewHelper.py
OlympusTrader/ui/interfaces/: store.py
OlympusTrader/ui/pages/: assets.py  overview.py  settings.py  strategy.py  strategy_viewer.py
OlympusTrader/utils/: asyncStepCoordinator.py  insight.py  interfaces.py  timeframe.py  tools.py  types.py
docs/: requirements.txt
docs/source/: OlympusTrader.alpha.rst  OlympusTrader.broker.rst  OlympusTrader.insight.executors.canceled.rst  OlympusTrader.insight.executors.closed.rst  OlympusTrader.insight.executors.executed.rst  OlympusTrader.insight.executors.filled.rst  OlympusTrader.insight.executors.general.rst  OlympusTrader.insight.executors.new.rst  OlympusTrader.insight.executors.rejected.rst  OlympusTrader.insight.executors.rst  OlympusTrader.insight.rst  OlympusTrader.rst  OlympusTrader.strategy.rst  OlympusTrader.ui.rst  OlympusTrader.universe.rst  OlympusTrader.utils.rst  alphas_and_executors.rst  conf.py  getting_started.rst  index.rst  insights.rst  modules.rst
examples/: README.md  analyse_backtests.ipynb  ccxtStrat.py  mt5brokertestv2.py  testOrderUpdate.py  testRSIStrat.py  testRSIStratv2.py  v2_test_paper_live.py  v2_tests.py
tests/: mt5dealTiming.py
