[tool.poetry]
name = "olympustrader"
version = "0.3.5.3"
description = "trading bot framework"
authors = ["Moustapha Diaby <me@isaacdiaby.tech>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://olympustrader.readthedocs.io/en/latest/"
repository = "https://github.com/isaac-diaby/OlympusTrader"
documentation = "https://olympustrader.readthedocs.io/en/latest/"
keywords = ["Trading bot", "Framework", "backtesting", "trading", "HFT"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Topic :: Office/Business :: Financial',
    'Topic :: Office/Business :: Financial :: Investment',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Intended Audience :: Developers',
    'Intended Audience :: Financial and Insurance Industry',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only'
]

packages = [{include="OlympusTrader"}]

[tool.poetry.dependencies]
python = "^3.12"
alpaca-py = "^0.34.0"
MetaTrader5 = {version = "^5.0", optional = true}
yfinance = "^0.2.50"
ta-lib = {version = "^0.5.1", optional = true}
pandas-ta = "^0.3.14b"
scipy = "^1.14.0"
numpy = "^1.16.5"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
nest-asyncio = "^1.6.0"
tables = "^3.10.1"
setuptools = "^72.1.0"
vectorbt = "0.27.2"
quantstats = "^0.0.62"
ccxt = "^4.4.38"
dash = "^2.18.2"
dash-tvlwc = "^0.1.1"
tqdm = "^4.67.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
nbformat = "^5.10.4"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
piccolo-theme = "^0.24.0"
sphinx-autobuild = "^2024.4.16"

[tool.poetry.extras]
talib = ["ta-lib"]
metatrader = ["MetaTrader5"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
